# exec-ledger

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/execledger/: __init__.py  cli.py  db.py  engine.py  errors.py  models.py  pipeline.py  repository.py  runner.py
src/execledger/commands/: history.py  init.py  job.py  pipeline.py  run.py  step.py
tests/: test_db.py  test_engine.py  test_errors.py  test_history.py  test_init.py  test_models.py  test_pipeline_api.py  test_pipeline_cli.py  test_repository.py  test_run_cli.py  test_runner.py  test_step_cli.py
