[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/execledger"]

[project]
name = "exec-ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
exl = "execledger.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
