[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/execledger"]

[project]
name = "exec-ledger"
version = "0.0.3a0"
description = "Local job runner for small automation tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
exl = "execledger.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
